--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Paul Caruana",
   "license": "ISC",
   "dependencies": {
-    "solc": "^0.4.17"
+    "ganache-cli": "^6.12.2",
+    "mocha": "^9.2.1",
+    "solc": "^0.4.17",
+    "web3": "^1.7.1"
   }
 }
