--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Paul Caruana",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.0.3",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.2.1",
     "solc": "^0.4.17",
